# mqtt-plus

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md  skills-lock.json
assets/icons/: app-icon.icns
docs/: APPFACADE_MIGRATION_PROGRESS.md  OPEN_SOURCE_CHECKLIST.md  SECURITY_NOTES.md
i18n/: mqtt_plus_zh_CN.ts
qml/: AppUi.qml  Main.qml
qml/components/: AppBadge.qml  AppButton.qml  AppCheckBox.qml  AppComboBox.qml  AppDivider.qml  AppIconButton.qml  AppPanel.qml  AppSectionHeader.qml  AppSessionPill.qml  AppSpinner.qml  AppStatusBadge.qml  AppTextArea.qml  AppTextField.qml  AppToolTip.qml
qml/dialogs/: AddSubscriptionDialog.qml  ScriptLibraryWindow.qml  SessionEditorDialog.qml
qml/features/events/: EventStreamView.qml  LogPage.qml  SessionActivityPanel.qml
qml/features/logs/: LogsView.qml
qml/features/publish/: PublishComposer.qml
qml/features/scripts/: ScriptLibraryWindow.qml  ScriptListPane.qml  ScriptTestPane.qml  ScriptWorkspacePanel.qml  ScriptsView.qml
qml/features/sessions/: SessionEditorDialog.qml  SessionOverviewPanel.qml  SessionSidebar.qml
qml/features/settings/: SettingsView.qml
qml/features/streams/: EventStreamView.qml
qml/features/subscriptions/: AddSubscriptionDialog.qml  SubscriptionsPanel.qml
qml/features/workbench/: AddSubscriptionDialog.qml  EventStreamView.qml  PublishComposer.qml  SessionActivityPanel.qml  SessionEditorDialog.qml  SessionOverviewPanel.qml  SessionSidebar.qml  SubscriptionsPanel.qml  WorkbenchView.qml
qml/panels/: EventStreamView.qml  PublishComposer.qml  ScriptListPane.qml  ScriptTestPane.qml  ScriptWorkspacePanel.qml  SessionActivityPanel.qml  SessionOverviewPanel.qml  SessionSidebar.qml  SubscriptionsPanel.qml
qml/views/: HistoryView.qml  ScriptsView.qml  SettingsView.qml  WorkbenchView.qml
scripts/: package-linux.sh  package-macos.sh  package-windows.ps1
src/: appcontroller.cpp  appcontroller.h  appcontrollerevents.cpp  appcontrollermodels.cpp  appcontrollermqtt.cpp  appcontrollerscripts.cpp  appcontrollersessions.cpp  appcontrollersubscriptions.cpp  appcontrollertheme.cpp  appcontrollerutils.cpp  appcontrollerutils.h  eventrenderer.cpp  eventrenderer.h  historystore.cpp  historystore.h  luarunner.cpp  luarunner.h  main.cpp  mqttclient.cpp  mqttclient.h  payloadcodec.cpp  scriptstore.cpp  scriptstore.h  sessionconfig.cpp  sessionconfig.h
src/app/: appbus.cpp  appbus.h  appcontext.cpp  appcontext.h  appcontrollerwiring.cpp  appcontrollerwiring.h  appeventbus.cpp  appeventbus.h  appfacade.cpp  appfacade.h  appfacadeevents.cpp  appfacademenus.cpp  appfacademodels.cpp  appfacademqtt.cpp  appfacadepreferences.cpp  appfacadescripts.cpp  appfacadesessions.cpp  appfacadesubscriptions.cpp  appfacadetheme.cpp  appfacadeutils.cpp  appfacadeutils.h  apphistoryservices.cpp  apphistoryservices.h  applicationkernel.cpp  applicationkernel.h  appmodelsync.cpp  appmodelsync.h  appruntime.cpp  appruntime.h  appruntimestate.cpp  appruntimestate.h  appruntimeutils.cpp  appruntimeutils.h  appscriptservices.cpp  appscriptservices.h  appsessionlifecycle.cpp  appsessionlifecycle.h  appsessionruntimebindings.cpp  appsessionruntimebindings.h  appsettingsfacade.cpp  (+38 more)
src/controllers/: eventcontroller.cpp  eventcontroller.h  languagecontroller.cpp  languagecontroller.h  mqttcontroller.cpp  mqttcontroller.h  preferencescontroller.cpp  preferencescontroller.h  scriptcontroller.cpp  scriptcontroller.h  sessioncontroller.cpp  sessioncontroller.h  subscriptioncontroller.cpp  subscriptioncontroller.h  themecontroller.cpp  themecontroller.h
src/domain/: script.h  session.h  sessionconfig.h  subscription.h
src/models/: eventstreammodel.cpp  eventstreammodel.h  scriptlibrarymodel.cpp  scriptlibrarymodel.h  scripttestsamplesmodel.cpp  scripttestsamplesmodel.h  sessionlistmodel.cpp  sessionlistmodel.h  subscriptionfiltermodel.cpp  subscriptionfiltermodel.h  subscriptionlistmodel.cpp  subscriptionlistmodel.h
src/presentation/: eventrenderer.cpp
src/services/payload/: payloadcodec.h
src/services/scripting/: luarunner.h
src/services/storage/: historystore.cpp  historystore.h  scriptstore.cpp  scriptstore.h  sessionsettingsstore.cpp  sessionsettingsstore.h
tests/: test_appbus.cpp  test_appfacadefacades.cpp  test_eventstreammodel.cpp  test_payloadcodec.cpp  test_sessionconfig.cpp
